--- a/Resources/ALC256/Info.plist
+++ b/Resources/ALC256/Info.plist
@@ -100,6 +100,14 @@
 				<key>Path</key>
 				<string>layout97.xml.zlib</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Kian1991 - Realtek ALC256 (3246) for MateBook X Pro 2018</string>
+				<key>Id</key>
+				<integer>64</integer>
+				<key>Path</key>
+				<string>layout64.xml.zlib</string>
+			</dict>
 		</array>
 		<key>Platforms</key>
 		<array>
@@ -190,6 +198,14 @@
 				<integer>97</integer>
 				<key>Path</key>
 				<string>Platforms97.xml.zlib</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Kian1991 - Realtek ALC256 (3246) for MateBook X Pro 2018</string>
+				<key>Id</key>
+				<integer>64</integer>
+				<key>Path</key>
+				<string>Platforms64.xml.zlib</string>
 			</dict>
 		</array>
 	</dict>
